--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,6 +3,7 @@ spring:
     change-log: classpath:/db/changelog/master.xml
     contexts: dev
     drop-first: true
+    enabled: true
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:test
@@ -10,7 +11,11 @@ spring:
     password: password
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: validate
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
   servlet:
     multipart:
       max-file-size: -1
@@ -34,3 +39,12 @@ app:
     location: ./uploads/
 server:
   port: 8080
+
+logging:
+  level:
+    org:
+      hibernate:
+        orm:
+          jdbc:
+            bind: TRACE
+
